remove searchname; wip paging
